@@ -2,7 +2,10 @@ package com.example.be8arm.domain.recruitment.recruitment.service;
 
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.stream.Collectors;
 
+import com.example.be8arm.domain.member.member.entity.MemberInfoDto;
+import com.example.be8arm.domain.recruitment.recruitment.entity.RecruitmentDto;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -37,7 +40,7 @@ public class RecruitmentService {
 			.member(member)
 			.title(recruitmentCreateRequestDto.getTitle())
 			.content(recruitmentCreateRequestDto.getContent())
-			.recruit_date(recruitmentCreateRequestDto.getRecruit_date())
+			.recruit_date(recruitmentCreateRequestDto.getRecruitDate())
 			.place(recruitmentCreateRequestDto.getPlace())
 			.partnerGender(recruitmentCreateRequestDto.getPartnerGender())
 			.partnerAge(recruitmentCreateRequestDto.getPartnerAge())
@@ -49,20 +52,13 @@ public class RecruitmentService {
 		return new RecruitmentCreateResponseDto(recruitment);
 	}
 
-	public List<RecruitmentListResponseDto> findRecruitmentList() {
-		List<RecruitmentListResponseDto> recruitments = recruitmentRepository.findAll()
-			.stream()
-			.map(recruitment -> new RecruitmentListResponseDto(
-				recruitment.getMember(),
-				recruitment.getTitle(),
-				recruitment.getRecruit_date(),
-				recruitment.getPartnerGender(),
-				recruitment.getPartnerAge(),
-				recruitment.getRoutine()
-			))
-			.toList();
-		return recruitments;
-	}
+    public List<RecruitmentListResponseDto> findRecruitmentList() {
+        List<RecruitmentListResponseDto> recruitments = recruitmentRepository.findAll()
+                .stream()
+                .map(RecruitmentListResponseDto::new)
+                .toList();
+        return recruitments;
+    }
 
 	public RecruitmentListDetailResponseDto findRecruitment(Long id) {
 		Recruitment recruitment = recruitmentRepository.findById(id)
@@ -80,7 +76,7 @@ public class RecruitmentService {
 
 		existingRecruitment.setTitle(recruitmentUpdateRequestDto.getTitle());
 		existingRecruitment.setContent(recruitmentUpdateRequestDto.getContent());
-		existingRecruitment.setRecruit_date(recruitmentUpdateRequestDto.getRecruit_date());
+		existingRecruitment.setRecruit_date(recruitmentUpdateRequestDto.getRecruitDate());
 		existingRecruitment.setPlace(recruitmentUpdateRequestDto.getPlace());
 		existingRecruitment.setPartnerGender(recruitmentUpdateRequestDto.getPartnerGender());
 		existingRecruitment.setPartnerAge(recruitmentUpdateRequestDto.getPartnerAge());
@@ -104,16 +100,11 @@ public class RecruitmentService {
 	public List<RecruitmentListResponseDto> findMyRecruitmentList(Member member) {
 		List<Recruitment> recruitments = recruitmentRepository.findAllByMember(member);
 
-		return recruitments
-			.stream()
-			.map(recruitment -> RecruitmentListResponseDto.builder()
-				.title(recruitment.getTitle())
-				.recruit_date(recruitment.getRecruit_date())
-				.routine(recruitment.getRoutine())
-				.partnerGender(recruitment.getPartnerGender())
-				.partnerAge(recruitment.getPartnerAge())
-				.build()
-			)
-			.toList();
+		return recruitments.stream()
+				.map(recruitment -> new RecruitmentListResponseDto(
+						new MemberInfoDto(recruitment.getMember()), // MemberInfoDto 생성자에 필요한 파라미터를 전달
+						new RecruitmentDto(recruitment) // RecruitmentDto 생성자에 필요한 파라미터를 전달
+				))
+				.collect(Collectors.toList());
 	}
 }
